fixed spacing between todos

--- a/src/Components/Todo/Todo.css
+++ b/src/Components/Todo/Todo.css
@@ -2,6 +2,7 @@
 
 .Todo {
   height: 100px;
+  margin: 10px 0px 20px 0px;
 }
 
 .Todo__container {
